--- a/custom-style.css
+++ b/custom-style.css
@@ -292,6 +292,7 @@ body:not(.home) .site-header:before {
         -webkit-box-align: center;
         -ms-flex-align: center;
     align-items: center;
+    background-image: url( https://2016.stockholm.wordcamp.org/files/2016/08/wc-hero-bg.jpg );
         display: -webkit-box;
         display: -ms-flexbox;
     display: flex;
