Removed body margin

--- a/custom-style.css
+++ b/custom-style.css
@@ -2,6 +2,10 @@ html {
     font-size: 62.5%;
 }
 
+body {
+    margin: 0 0 0 0;
+}
+
 body > div {
     color: rgba( 17, 17, 17, 1 );
     font-family: 'freight-display-pro', 'Playfair Display', serif;
