--- a/custom-style.css
+++ b/custom-style.css
@@ -313,9 +313,9 @@ body:not(.home) .site-header:before {
     background-image: linear-gradient( 31deg, #2082D0 0%, #F7CC39 100% );
     content: "";
     display: block;
+    height: 100vh;
     opacity: 0.55;
     position: absolute;
-        bottom: 0;
         left: 0;
         right: 0;
         top: 0;
