Set hero to position: relative;

--- a/custom-style.css
+++ b/custom-style.css
@@ -307,6 +307,7 @@ body:not(.home) .site-header:before {
         -webkit-box-pack: center;
         -ms-flex-pack: center;
     justify-content: center;
+    position: relative;
 }
 
 .hero:before {
