--- a/custom-style.css
+++ b/custom-style.css
@@ -1140,10 +1140,13 @@ li.comment li.comment { margin: 4rem 0 0 3rem; }
     position: absolute;
         left: calc( 50% - 4rem );
         top: 0;
+}
+
+.wcorg-organizer img:not(:hover) {
     width: 8rem;
 }
 
-.wcorg-organizer h2 {
+.entry-content .wcorg-organizer h2 {
     font-size: 2.4rem;
     line-height: 1.1;
     margin: 0 0 0 0;
@@ -1691,6 +1694,10 @@ body .site-navigation .twitter-link a {
         flex: 1 0 calc( 50% - 2rem );
         margin: 0 0 2rem 2rem;
         max-width: calc( 50% - 2rem );
+    }
+    
+    .entry-content .wcorg-organizer h2 {
+        font-size: 2rem;
     }
     
     /* FOOTER */
