--- a/custom-style.css
+++ b/custom-style.css
@@ -622,6 +622,7 @@ body .wcpt_widget_speakers {
 .home article:first-child .entry-title {
     font-size: 4.8rem;
     font-weight: 700;
+    line-height: 1.1;
 }
 
 .home article:first-child .entry-meta {
