--- a/custom-style.css
+++ b/custom-style.css
@@ -732,6 +732,7 @@ body .wcb_widget_sponsors .bronze .sponsor-logo { width: calc( 20% - 2rem ); }
 
 .wcb_widget_sponsors .sponsor-logo img {
     max-height: 100%;
+    object-fit: contain;
     width: auto;
 }
 
