--- a/custom-style.css
+++ b/custom-style.css
@@ -300,7 +300,7 @@ body:not(.home) .site-header:before {
         -webkit-box-align: center;
         -ms-flex-align: center;
     align-items: center;
-    background-image: url( https://2016.stockholm.wordcamp.org/files/2016/08/wc-hero-bg.jpg );
+    background-image: url( https://2018.norrkoping.wordcamp.org/files/2018/04/Visualiseringscenter_06-e1524380106466.jpg );
         display: -webkit-box;
         display: -ms-flexbox;
     display: flex;
