make the button just a little bit nicer.
TBD: Make it even nicer. MVP right now.

--- a/custom-style.css
+++ b/custom-style.css
@@ -409,6 +409,8 @@ aside.jetpack_subscription_widget .subscribe-text #subscribe-email input {
 
 aside.jetpack_subscription_widget .subscribe-email input[type="submit"] {
      width: 20%;
+     background: white;
+     padding: 12px 0px;	
 }
 
 	
