--- a/custom-style.css
+++ b/custom-style.css
@@ -128,6 +128,7 @@ body:not(.home) .site-header:before {
     z-index: 25;
 }
 
+/*
 .site-header h1.site-title a {
     background: url( https://2016.stockholm.wordcamp.org/files/2016/08/wc-logo-black.png ) no-repeat center;
     background-size: 100% auto;
@@ -140,6 +141,7 @@ body:not(.home) .site-header:before {
     text-indent: -9999rem;
     width: 16.3rem;
 }
+*/
 
 .home .site-header h1.site-title a,
 .site-header h2.site-description,
