--- a/custom-style.css
+++ b/custom-style.css
@@ -128,9 +128,8 @@ body:not(.home) .site-header:before {
     z-index: 25;
 }
 
-/*
 .site-header h1.site-title a {
-    background: url( https://2016.stockholm.wordcamp.org/files/2016/08/wc-logo-black.png ) no-repeat center;
+    background: url( https://2018.norrkoping.wordcamp.org/files/2018/06/wordcamp.png ) no-repeat center;
     background-size: 100% auto;
     display: block;
         -ms-flex: 1 0 16.3rem;
@@ -141,7 +140,6 @@ body:not(.home) .site-header:before {
     text-indent: -9999rem;
     width: 16.3rem;
 }
-*/
 
 .home .site-header h1.site-title a,
 .site-header h2.site-description,
