it makes the logo bigger or it gets the hose again

--- a/custom-style.css
+++ b/custom-style.css
@@ -130,12 +130,12 @@ body:not(.home) .site-header:before {
 
 .site-header h1.site-title a {
     background: url( https://2018.norrkoping.wordcamp.org/files/2018/06/wordcamp.png ) no-repeat center;
-    background-size: 100% auto;
+    background-size: auto 100%;
     display: block;
         -ms-flex: 1 0 16.3rem;
         -webkit-flex: 1 0 16.3rem;
     flex: 1 0 16.3rem;
-    height: 5.9rem;
+    height: 8rem;
     margin-right: 20rem;
     text-indent: -9999rem;
     width: 16.3rem;
